# CST8152

./: CMakeLists.txt  Compilers.c  Compilers.h  Main1Coder.c  Step1Coder.h
A1/: Step1Coder.c  launch.vs.json
A1/code/: CMakeLists.txt  Compilers.c  Main1Coder.c  Step1Coder.c  gitLogs.txt  launch.vs.json
A1/input/: CODED.txt
Quarks/: gitLogs.txt  gitlogsA6.txt
Quarks/code/: CMakeLists.txt  Compilers.c  Compilers.h  Main1Coder.c  Main2Reader.c  Main3Scanner.c  Main4Parser.c  Main5Writer.c  Step1Coder.c  Step2Reader.c  Step2Reader.h  Step3Scanner.c  Step3Scanner.h  Step4Parser.c  Step4Parser.h  Step5Writer.c  Step5Writer.h  output
Quarks/input/: Big.sof  Hello.sof  README.txt  errorCoded.qk  errorInput.qk  helloOUT.txt  quarkCoded.qk  quarkInput.qk  quarkTestInput.qk
QuarksCopy/code/: CMakeLists.txt  Main1Coder.c  Main2Reader.c  Step1Coder.h  Step2Reader.c  Step2Reader.h
a1files/code/: Compilers.h  Step1Coder.h
